--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 *{margin: 0;}
 /**************************HEADER*****************************/
+a{
+
+  text-decoration: none;
+}
 .header{
     display: flex;
     justify-content: space-around;
