--- a/css/style.css
+++ b/css/style.css
@@ -170,12 +170,18 @@ a{
     text-transform: uppercase;
     color: white;
     margin-bottom: 20px;
+    transform: translateY(30px);
+    animation: float 5s ease-out forwards;
+    transition:box-shadow opacity 0.5s ease, transform 0.5s ease;
   }
   
   .foto-perfil{
     border-radius: 50%;
     margin-right: 10px;
     max-width: 50%;
+    transform: translateY(30px);
+    animation: float 3s ease-out forwards;
+    transition:box-shadow opacity 0.5s ease, transform 0.5s ease;
   }
   
   .icones-contato{
@@ -213,11 +219,29 @@ a{
   .item-card-skill{
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.3s ease;
     border-radius: 5px;
     width: 70px;
     height: auto;
     margin: 5px;
+    transform: translateX(-200%);
+    animation: float 5s ease-out forwards;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+  @keyframes float {
+    0% {
+      opacity: 0;
+      transform: translateY(50px); /* Inicia mais abaixo */
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0); /* Fica na posição original */
+    }
+  }
+
+  /* Quando o card é visível */
+  .card.visible {
+    opacity: 1;
+    transform: translateY(0); /* Fica na posição original */
   }
   .item-card-skill:hover{
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
@@ -255,6 +279,8 @@ a{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease;
     box-sizing: border-box;
+    transform: translateY(30px);
+    animation: float 2s ease-out forwards;
   }
   .item-card:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
